# InformaticsFundamentalsProjects

./: .gitignore
Common/: CMakeLists.txt  common.h
Common/src/: common.cpp  common.h
Practice/11th week/Product class practice/: Product.h  sourceCode.cpp
Practice/3rd week/SquareAndRectangleAreaCalculator/: CMakeLists.txt  main.cpp
Practice/3rd week/SquareAndRectangleAreaCalculator/src/: main.cpp
Practice/3rd week/TotalSalaryCalculator/: CMakeLists.txt  main.cpp
Practice/3rd week/TotalSalaryCalculator/src/: main.cpp
Practice/4th week/AnnualBudgetDistribution/: CMakeLists.txt  main.cpp
Practice/4th week/BMICalculator/: CMakeLists.txt  main.cpp
Practice/4th week/CatVaccination/: CMakeLists.txt  main.cpp
Practice/4th week/FinalAverage/: CMakeLists.txt  main.cpp
Practice/4th week/WorkerSalary/: CMakeLists.txt  main.cpp
Practice/5th week/MultiplicationTables/: CMakeLists.txt  main.cpp
Practice/5th week/PrintASquare/: CMakeLists.txt  main.cpp
Practice/5th week/PrintNumbersDescending/: CMakeLists.txt  main.cpp
Practice/5th week/ShoppingCart/: CMakeLists.txt  main.cpp
Practice/6th week/CarRentalPrice/: CMakeLists.txt  main.cpp  main_selfContained.cpp
Projects/1st project/: CMakeLists.txt  SourceCode.cpp  main.cpp
